# eng

./: .gitignore  LICENSE  PROJECT_STATUS.md  README.md  USAGE.md  install.bat  start.bat  wrangler.toml
.github/workflows/: deploy.yml
backend/: db.sqlite3-shm  db.sqlite3-wal  main.py  pyproject.toml  seed_data.py
backend/app/api/content/: router.py
backend/app/api/export/: router.py
backend/app/api/generation/: router.py
backend/app/api/progress/: router.py
backend/app/api/typing/: router.py
backend/app/core/: config.py
backend/app/models/: content.py  export.py  progress.py  typing.py
backend/app/schemas/: content.py  export.py  generation.py  progress.py  typing.py
backend/app/services/: __init__.py
backend/app/services/content/: content_service.py
backend/app/services/export/: export_service.py
backend/app/services/generation/: generation_service.py
backend/app/services/progress/: progress_service.py
backend/app/services/typing/: typing_service.py
database/: schema.sql  seed_supabase.sql
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/hooks/: useAuth.tsx  useSkillPractice.ts  useSupabase.ts  useTTS.ts
frontend/src/lib/: supabase.ts
frontend/src/pages/: Achievements.tsx  Auth.tsx  ContentLibrary.tsx  Generation.tsx  Home.tsx  Leaderboard.tsx  Listening.tsx  NotFound.tsx  ProgressDashboard.tsx  Pronunciation.tsx  Reading.tsx  Settings.tsx  Skills.tsx  Speaking.tsx  TypingPractice.tsx  Vocabulary.tsx  Writing.tsx
(+32 files in other folders)
